# BiblioEnsias

./: #ui.glade#  CMakeLists.txt  Project_c.cbp  Project_c.depend  Project_c.layout  README.md  acceuil.glade  acceuil.glade~  adherent.glade  emprunt.glade~  gestion_adherents.glade  gestion_adherents.glade~  livre.c  livre.glade  livre.glade~  livre.h  main.c  modif_adh.glade  modif_adh_conf.glade  modifier_adh.glade  rechercher_adh.glade  style.css  supprimer_adh.glade  ui.glade
Headers/: adherant.h  livre.h
Sources/: livre.c  main.c
glade/: acceuil.glade  acceuil.glade~  adherent.glade  emprunt.glade  emprunt.glade~  livre.glade
modules/adherent/: adherent.c  adherent.h
modules/algorithm/: algorithm.c  algorithm.h
modules/emprunt/: emprunt.c
modules/livre/: book.c  book.h
pages/: livre.h
pages/adherant_page/: adherant.c  adherant.h
pages/adherent_page/: adherent.c
pages/book_page/: book.c  book.h  book_algorithm.c  book_algorithm.h
pages/emprunt_page/: emprunt.c  emprunt.h
pages/main_page/: acceuil.c  acceuil.h
